# fp-hw

./: .gitignore  LICENSE  stack.yaml
hw1/: hw1.cabal
hw1/src/: Task1.hs  Task2.hs  Task3.hs  Task4.hs  Task5.hs
hw1/test/: Spec.hs  Test1.hs  Test2.hs  Test3.hs  Test4.hs  Test5.hs  TestLib.hs
hw3/src/: Task1.hs  Task2.hs  Util.hs
hw4/: hw4.cabal
hw4/src/: Task1.hs  Task1_.hs  Task2.hs
hw4/test/: Spec.hs  Test1.hs
