name:                hw1
version:             0.1.0.0
synopsis:            Synopsis for task 1
description:         Task 1 for FP ITMO course

homepage:            https://github.com/BioRyajenka/fp-hw#readme
license:             MIT
license-file:        LICENSE
author:              Igor Sushencev
maintainer:          igor-sushencev@yandex.ru
copyright:           2017 Igor Sushencev

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Task1 Task2 Task3 Task4 Task5
  ghc-options:         -Wall
                       -fno-warn-orphans
  build-depends:       base >= 4.7 && < 5
--                     , random
  default-language:    Haskell2010

--executable hw1-exe
--  hs-source-dirs:      app
--  main-is:             Main.hs
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--  build-depends:       base
--                     , hw1
--                     , random
  default-language:    Haskell2010

test-suite hw1-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
--                       src
  main-is:             Spec.hs
  build-depends:       base
                     , hw1
                     , hspec
                     , QuickCheck
                     , random
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/BioRyajenka/fp-hw
