name:                hw4
version:             0.1.0.0
synopsis:            Synopsis for task 4
description:         Task 4 for FP ITMO course

homepage:            https://github.com/BioRyajenka/fp-hw#readme
license:             MIT
license-file:        LICENSE
author:              Igor Sushencev
maintainer:          igor-sushencev@yandex.ru
copyright:           2017 Igor Sushencev

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Task1
                     , Task2
  ghc-options:         -Wall
                       -fno-warn-orphans
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , mtl
                     , megaparsec
                     , template-haskell
                     , text
                     , neat-interpolation
                     , hspec
                     , QuickCheck
                     , lens

  default-language:    Haskell2010

test-suite hw4-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hw4
                     , hspec
                     , QuickCheck
                     , random
                     , containers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/BioRyajenka/fp-hw
